cambios generales de maquetado

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <nav class="topMenu">
         <div class="topMenu-container">
             <a href="index.html" class="topMenu-container-imgContainer">
-                <img src="./img/home/logo.png" alt="Logo" width="100%" height="100%">
+                <img src="./img/logo.svg" alt="Logo" width="100%" height="100%">
             </a>
             <div class="topMenu-container-options d-none d-lg-flex">
                 <ul>
@@ -51,9 +51,6 @@
                     </form>
                 </div>
             </div>
-            <div class="login-container-img d-none d-lg-flex">
-                <img src="./img/log in/log-in-image.jpg" alt="login-img" width="100%" height="auto">
-            </div>
         </div>
     </main>
     <div class="footerNav d-flex d-lg-none">
@@ -61,19 +58,19 @@
             <div class="topMenu-container-options">
                 <ul>
                     <li><a href="sportsbook.html">
-                            <div class="icon-container"><img src="./img/icons/sports.png" alt="sportsbook"></div>
+                            <div class="icon-container"><img src="./img/icons/sports.svg" alt="sportsbook"></div>
                             SPORTBOOK
                         </a></li>
                     <li><a href="casino.html">
-                            <div class="icon-container"><img src="./img/icons/casino.png" alt="casino"></div>
+                            <div class="icon-container"><img src="./img/icons/casino.svg" alt="casino"></div>
                             CASINO
                         </a></li>
                     <li><a href="racebook.html">
-                            <div class="icon-container horse"><img src="./img/icons/racebook.png" alt="racebook"></div>
+                            <div class="icon-container horse"><img src="./img/icons/racebook.svg" alt="racebook"></div>
                             RACEBOOK
                         </a></li>
                     <li><a href="livebetting.html">
-                            <div class="icon-container "><img src="./img/icons/live.png" alt="livebetting"></div>
+                            <div class="icon-container "><img src="./img/icons/live.svg" alt="livebetting"></div>
                             LIVE BETTING
                         </a></li>
                 </ul>
@@ -81,20 +78,16 @@
         </div>
     </div>
     <footer>
-        <a href="index.html">
-            <img src="./img/home/logo.png" alt="logo">
-        </a>
         <div class="footer-list">
             <section>
                 <div><a href="sportsbook.html">SPORTBOOK</a></div>
-                <div><a href="racebook.html">RACEBOOK</a></div>
                 <div><a href="livebetting.html">LIVE BETTING</a></div>
+                <div><a href="racebook.html">RACEBOOK</a></div>
                 <div><a href="casino.html">CASINO</a></div>
                 <div><a href="houserules.html">HOUSE RULES</a></div>
                 <div><a href="sportsrules.html">SPORTS RULES</a></div>
                 <div><a href="horsetracks.html">HORSE TRACKS</a></div>
-                <div><a href="https://adm.playdaredevil.com/">AGENTS</a></div>
-                <div><a href="https://agents.playdaredevil.com/AgentSiteV2/">AGENTS CLASSIC</a></div>
+                <div><a href="http://agents.playdaredevil.com/">ADMIN</a></div>
                 <div><a href="privacy.html">PRIVACY POLICY</a></div>
                 <div><a href="termsAndConditions.html">TERMS AND CONDITIONS</a></div>
                 <div><a href="responsibleGaming.html">RESPONSIBLE GAMING</a></div>
