--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="sito de apuestas online deredevil">
     <link rel="shortcut icon" href="./img/icons/fav.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -16,7 +17,7 @@
     <nav class="topMenu">
         <div class="topMenu-container">
             <a href="index.html" class="topMenu-container-imgContainer">
-                <img src="./img/home/logo.png" alt="Logo" width="100%" height="100%">
+                <img src="./img/logo.svg" alt="Logo" width="100%" height="100%">
             </a>
             <div class="topMenu-container-options d-none d-lg-flex">
                 <ul>
@@ -35,86 +36,45 @@
     </nav>
     <main role="main">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
             <div class="carousel-inner">
                 <div class="carousel-item active carriusel-item-container">
                     <div class="carrousel-main">
                         <div class="carrousel-main-containerInfo">
-                            <h2>BET ON SPORTS LIVE WAGER</h2>
+                            <h2>BET ON SPORTS<br><span>LIVE WAGER</span></h2>
                         </div>
-                        <div class="carrousel-main-containerImg"><img src="./img/home/player.png" alt="sports"
+                        <div class="carrousel-main-containerImg"><img src="./img/slider_elm.png" alt="sports"
                                 width="100%" height="auto">
                         </div>
-
                     </div>
-
-                </div>
-                <div class="carousel-item carriusel-item-container">
-                    <div class="carrousel-main">
-                        <div class="carrousel-main-containerInfo">
-                            <h2>RACEBOOK</h2>
-                        </div>
-                        <div class="carrousel-main-containerImg"><img src="./img/home/horse.png" alt="sports"
-                                width="100%" height="auto">
-                        </div>
-
-                    </div>
-
-                </div>
-                <div class="carousel-item carriusel-item-container">
-                    <div class="carrousel-main">
-                        <div class="carrousel-main-containerInfo">
-                            <h2>ONLINE CASINO</h2>
-                        </div>
-                        <div class="carrousel-main-containerImg"><img src="./img/home/casino elemnts.png" alt="sports"
-                                width="100%" height="auto">
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
         <div class="cardsContainer d-none d-xl-flex">
             <a href="sportsbook.html" class="cardsContainer-item">
                 <div class="cardsContainer-item-info">
+                    <img class="cardsContainer-item-info-icon" src="./img/icons/sports.svg" alt="sportsbook">
                     <p>SPORTS</p>
                 </div>
                 <div class="cardsContainer-item-img">
-                    <img src="./img/home/player 02.png" alt="sports">
+                    <img src="./img/products/sports_elm.png" alt="sports">
                 </div>
             </a>
             <a href="casino.html" class="cardsContainer-item">
                 <div class="cardsContainer-item-info">
+                    <img class="cardsContainer-item-info-icon" src="./img/icons/casino.svg" alt="sportsbook">
                     <p>CASINO</p>
                 </div>
                 <div class="cardsContainer-item-img">
-                    <img src="./img/home/casino elemnts 02.png" alt="casino">
+                    <img src="./img/products/casino_elm.png" alt="casino">
                 </div>
             </a>
             <a href="racebook.html" class="cardsContainer-item">
                 <div class="cardsContainer-item-info">
+                    <img class="cardsContainer-item-info-icon racebook" src="./img/icons/racebook.svg" alt="sportsbook">
                     <p>RACEBOOK</p>
                 </div>
                 <div class="cardsContainer-item-img">
-                    <img src="./img/home/horse 02.png" alt="RACEBOOK">
+                    <img src="./img/products/horses_elm.png" alt="RACEBOOK">
                 </div>
             </a>
         </div>
@@ -126,18 +86,20 @@
                         <div class="cards-wrapper">
                             <a href="sportsbook.html" class="cardsContainer-item">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon" src="./img/icons/sports.svg" alt="sportsbook">
                                     <p>SPORTS</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/player 02.png" alt="sports">
+                                    <img src="./img/products/sports_elm.png" alt="sports">
                                 </div>
                             </a>
                             <a href="casino.html" class="cardsContainer-item">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon" src="./img/icons/casino.svg" alt="sportsbook">
                                     <p>CASINO</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/casino elemnts 02.png" alt="casino">
+                                    <img src="./img/products/casino_elm.png" alt="casino">
                                 </div>
                             </a>
                         </div>
@@ -146,20 +108,22 @@
                 <div class="carousel-item">
                     <div class="cards-container">
                         <div class="cards-wrapper">
-                            <a href="racebook.html" class="cardsContainer-item race">
+                            <a href="racebook.html" class="cardsContainer-item">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon racebook" src="./img/icons/racebook.svg" alt="sportsbook">
                                     <p>RACEBOOK</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/horse 02.png" alt="RACEBOOK">
+                                    <img src="./img/products/horses_elm.png" alt="RACEBOOK">
                                 </div>
                             </a>
                             <a href="sportsbook.html" class="cardsContainer-item sports">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon" src="./img/icons/sports.svg" alt="sportsbook">
                                     <p>SPORTS</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/player 02.png" alt="sports">
+                                    <img src="./img/products/sports_elm.png" alt="sports">
                                 </div>
                             </a>
                         </div>
@@ -182,10 +146,11 @@
                         <div class="cards-wrapper">
                             <a href="sportsbook.html" class="cardsContainer-item">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon" src="./img/icons/sports.svg" alt="sportsbook">
                                     <p>SPORTS</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/player 02.png" alt="sports">
+                                    <img src="./img/products/sports_elm.png" alt="sports">
                                 </div>
                             </a>
                         </div>
@@ -196,10 +161,11 @@
                         <div class="cards-wrapper">
                             <a href="casino.html" class="cardsContainer-item">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon" src="./img/icons/casino.svg" alt="sportsbook">
                                     <p>CASINO</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/casino elemnts 02.png" alt="casino">
+                                    <img src="./img/products/casino_elm.png" alt="casino">
                                 </div>
                             </a>
                         </div>
@@ -208,12 +174,13 @@
                 <div class="carousel-item">
                     <div class="cards-container">
                         <div class="cards-wrapper">
-                            <a href="racebook.html" class="cardsContainer-item race">
+                            <a href="racebook.html" class="cardsContainer-item">
                                 <div class="cardsContainer-item-info">
+                                    <img class="cardsContainer-item-info-icon racebook" src="./img/icons/racebook.svg" alt="sportsbook">
                                     <p>RACEBOOK</p>
                                 </div>
                                 <div class="cardsContainer-item-img">
-                                    <img src="./img/home/horse 02.png" alt="RACEBOOK">
+                                    <img src="./img/products/horses_elm.png" alt="RACEBOOK">
                                 </div>
                             </a>
                         </div>
@@ -235,19 +202,19 @@
             <div class="topMenu-container-options">
                 <ul>
                     <li><a href="sportsbook.html">
-                            <div class="icon-container"><img src="./img/icons/sports.png" alt="sportsbook"></div>
+                            <div class="icon-container"><img src="./img/icons/sports.svg" alt="sportsbook"></div>
                             SPORTBOOK
                         </a></li>
                     <li><a href="casino.html">
-                            <div class="icon-container"><img src="./img/icons/casino.png" alt="casino"></div>
+                            <div class="icon-container"><img src="./img/icons/casino.svg" alt="casino"></div>
                             CASINO
                         </a></li>
                     <li><a href="racebook.html">
-                            <div class="icon-container horse"><img src="./img/icons/racebook.png" alt="racebook"></div>
+                            <div class="icon-container horse"><img src="./img/icons/racebook.svg" alt="racebook"></div>
                             RACEBOOK
                         </a></li>
                     <li><a href="livebetting.html">
-                            <div class="icon-container "><img src="./img/icons/live.png" alt="livebetting"></div>
+                            <div class="icon-container "><img src="./img/icons/live.svg" alt="livebetting"></div>
                             LIVE BETTING
                         </a></li>
                 </ul>
@@ -255,20 +222,16 @@
         </div>
     </div>
     <footer>
-        <a href="index.html">
-            <img src="./img/home/logo.png" alt="logo">
-        </a>
         <div class="footer-list">
             <section>
                 <div><a href="sportsbook.html">SPORTBOOK</a></div>
-                <div><a href="racebook.html">RACEBOOK</a></div>
                 <div><a href="livebetting.html">LIVE BETTING</a></div>
+                <div><a href="racebook.html">RACEBOOK</a></div>
                 <div><a href="casino.html">CASINO</a></div>
                 <div><a href="houserules.html">HOUSE RULES</a></div>
                 <div><a href="sportsrules.html">SPORTS RULES</a></div>
                 <div><a href="horsetracks.html">HORSE TRACKS</a></div>
-                <div><a href="https://adm.playdaredevil.com/">AGENTS</a></div>
-                <div><a href="https://agents.playdaredevil.com/AgentSiteV2/">AGENTS CLASSIC</a></div>
+                <div><a href="http://agents.playdaredevil.com/">ADMIN</a></div>
                 <div><a href="privacy.html">PRIVACY POLICY</a></div>
                 <div><a href="termsAndConditions.html">TERMS AND CONDITIONS</a></div>
                 <div><a href="responsibleGaming.html">RESPONSIBLE GAMING</a></div>
