correccion del login

--- a/casino.html
+++ b/casino.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
             <div class="topMenu-container-buttonContainer">
-                <a href="login.php" class="topMenu-container-buttonContainer-button">
+                <a href="login.html" class="topMenu-container-buttonContainer-button">
                     LOG IN
                 </a>
             </div>
@@ -54,56 +54,56 @@
             </div>
             <div class="casino-games__layout">
                 <div class="casino-games__layout--col1">
-                    <div class="casino-games__layout--grid"><a class="casino-games__layout--card" href="login.php"><img
+                    <div class="casino-games__layout--grid"><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/live-game.png"
                                 alt="Juegos en vivo">
                             <h3 class="casino-games__layout--h3">LIVE GAMES</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/table-games.png"
                                 alt="Juegos de mesa">
                             <h3 class="casino-games__layout--h3">TABLE GAMES</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/slots.png" alt="Slots">
                             <h3 class="casino-games__layout--h3">SLOTS</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/3d-slots.png" alt="3D Slots">
                             <h3 class="casino-games__layout--h3">SLOTS 3D</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/video-poker.png"
                                 alt="Video Poker">
                             <h3 class="casino-games__layout--h3">VIDEO POKER</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/virtual-sports.png"
                                 alt="Deportes Virtuales">
                             <h3 class="casino-games__layout--h3">VIRTUAL SPORTS</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/bingo.png" alt="Bingo">
                             <h3 class="casino-games__layout--h3">BINGO</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/keno.png" alt="Keno">
                             <h3 class="casino-games__layout--h3">KENO</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/scratch.png"
                                 alt="Tarjetas de raspar">
                             <h3 class="casino-games__layout--h3">SCRATCH CARDS</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/fixed-odds.png"
                                 alt="Apuetas fijas">
                             <h3 class="casino-games__layout--h3">FIXED ODDS</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/other-games.png"
                                 alt="Otros juegos">
                             <h3 class="casino-games__layout--h3">OTHER GAMES</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/blackjack.png" alt="Blackjack">
                             <h3 class="casino-games__layout--h3">BLACKJACK</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/roulette.png" alt="Ruleta">
                             <h3 class="casino-games__layout--h3">ROULETTE</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/poker.png" alt="Poker">
                             <h3 class="casino-games__layout--h3">POKER</h3>
-                        </a><a class="casino-games__layout--card" href="login.php"><img
+                        </a><a class="casino-games__layout--card" href="login.html"><img
                                 class="casino-games__layout--card-img" src="img/casino/rummy.png" alt="Rummy">
                             <h3 class="casino-games__layout--h3">RUMMY</h3>
                         </a>
