--- a/sportsbook.html
+++ b/sportsbook.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
             <div class="topMenu-container-buttonContainer">
-                <a href="login.php" class="topMenu-container-buttonContainer-button">
+                <a href="login.html" class="topMenu-container-buttonContainer-button">
                     LOG IN
                 </a>
             </div>
