--- a/sportsbook.html
+++ b/sportsbook.html
@@ -35,7 +35,7 @@
     </nav>
     <main role="main">
         <iframe width="100%" height="1500px" id="iframe-signup-page" class="cs-iframe-signup-page"
-            src="https://betslip.playdaredevil.com/mainbk/betslip" title="iframe-signup"></iframe>
+            src="https://abcwagering.ag/freeliveodds-all.php" title="iframe-signup"></iframe>
     </main>
     <div class="footerNav d-flex d-lg-none">
         <div class="topMenu-container">
